--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "this-app",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
